@@ -88,6 +88,8 @@ namespace MonoDevelop.Projects.Dom
 			get;
 		}
 		
+		IMember SearchMember (string name, bool caseSensitive);
+		
 		/// <value>
 		/// Types that are defined across several compilation unit (e.g. files) this returns
 		/// the other types that are part of the same super type.
