@@ -1,5 +1,13 @@
 2008-07-08  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
+	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
+	  MonoDevelop.Projects.Dom/ResolveResult.cs,
+	  MonoDevelop.Projects.Dom/DomType.cs,
+	  MonoDevelop.Projects.Dom/IType.cs: Worked on completion.
+
+2008-07-08  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.Dom/DomType.cs,
 	  MonoDevelop.Projects.Dom/AbstractMember.cs,
 	  MonoDevelop.Projects.Dom/Namespace.cs,
